objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Help_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Help Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Help_Code__c</fullName>
        <displayFormat>HP{000}</displayFormat>
        <label>Help Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Help_Interest__c</fullName>
        <label>Help Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Help_Locale_Area__c</fullName>
        <label>Help Locale Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Points__c</fullName>
        <label>Help Points</label>
        <summarizedField>Help_Point__c.Points__c</summarizedField>
        <summaryForeignKey>Help_Point__c.Help_By__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Social_Help</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Help_Active__c</columns>
        <columns>Help_Code__c</columns>
        <columns>Help_Interest__c</columns>
        <columns>Help_Locale_Area__c</columns>
        <columns>Help_Points__c</columns>
        <columns>Picture__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Social_Help</value>
        </filters>
        <label>Social Help</label>
    </listViews>
    <recordTypes>
        <fullName>Social_Help</fullName>
        <active>true</active>
        <label>Social Help</label>
    </recordTypes>
</CustomObject>